[gd_scene load_steps=6 format=3 uid="uid://dmchj07he0mho"]

[ext_resource type="Script" uid="uid://3r72pcbghkc0" path="res://Scripts/Weapons/enemy_hat_projectile.gd" id="1_lawv6"]
[ext_resource type="Texture2D" uid="uid://bm18u1wsukfwa" path="res://Assets/Sprites/Panda/hat_throw.png" id="2_m0xsp"]
[ext_resource type="AudioStream" uid="uid://uxnd7qf4lq85" path="res://Assets/Audio/SFX/Player/parry.wav" id="3_dq5po"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qxf0c"]
radius = 4.5

[sub_resource type="CircleShape2D" id="CircleShape2D_dgwo2"]
radius = 4.47

[node name="EnemyProjectile" type="CharacterBody2D"]
z_index = 4
collision_layer = 4097
collision_mask = 5
script = ExtResource("1_lawv6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m0xsp")
region_enabled = true
region_rect = Rect2(0, 0, 16, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qxf0c")

[node name="Despawn" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dgwo2")

[node name="Parry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dq5po")

[node name="HatSplitTimer" type="Timer" parent="."]

[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="HatSplitTimer" to="." method="_on_hat_split_timer_timeout"]
